--- a/charts/stylesheets/HeatMap.css
+++ b/charts/stylesheets/HeatMap.css
@@ -63,3 +63,7 @@
     background: -moz-linear-gradient(white, red); /* For Firefox 3.6 to 15 */
     background: linear-gradient(white, red); /* Standard syntax */
 }
+.link
+{
+    background: red;
+}
